🔨 ┇ ajustes no cadastro do mentor

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -109,3 +109,13 @@ a {
 body {
   background-color: black;
 }
+
+
+input:focus {
+	border-color: #ffffff !important;
+}
+
+
+select option{
+	color: #000000 !important;
+}
